--- a/metadata.ipynb
+++ b/metadata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "74ed9769",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "310cbdf2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import json\n",
-    "file_path = 'documents/IS/metadata.json'\n",
+    "file_path = 'documents/IS/metadata/metadata.json'\n",
     "\n",
     "with open(file_path, 'r') as f:\n",
     "\tdata = json.load(f)\n",
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "32077e87",
+   "execution_count": 5,
+   "id": "67046299",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "      <th>0</th>\n",
        "      <td>[Structured query language (SQL) is a programm...</td>\n",
        "      <td>[sql.txt]</td>\n",
-       "      <td>{'sql.txt': 'a44b6bf9274c9ea567c894de52bb04d32...</td>\n",
+       "      <td>{'sql.txt': 'ab68be149872d34328b015251af6c9a75...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -79,10 +79,10 @@
        "0  [Structured query language (SQL) is a programm...       [sql.txt]   \n",
        "\n",
        "                                         file_hashes  \n",
-       "0  {'sql.txt': 'a44b6bf9274c9ea567c894de52bb04d32...  "
+       "0  {'sql.txt': 'ab68be149872d34328b015251af6c9a75...  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
